--- a/src/style.css
+++ b/src/style.css
@@ -345,7 +345,7 @@ a.nav-link:hover:after {
   }
 }
 
-@media only screen and (max-width: 768px) and (-webkit-device-pixel-ratio : 3){
+@media only screen and (max-width: 768px) {
     @keyframes fadeInOpacity {
       0% {
         opacity: 0;
